Text updated to Plumber in Fullerton

--- a/index.html
+++ b/index.html
@@ -321,10 +321,10 @@
                 <div id="accordion-collapse-1-2" class="collapse" aria-labelledby="accordion-heading-1-2" data-bs-target="#accordion-1">
                   <div class="card-body">
                     <p>
-                      We service all of Fullerton including North Valley, Loma Alta, Ivey Ranch / Rancho Del Oro, Tri-City, Fire Mountain, Mira Costa, and Ocean Hills.
+                      We service all of Fullerton and the surrounding areas including La Habra, Brea, Yorba Linda, Placentia, Anaheim, Orange, Santa Ana, Garden Grove, Westminster, and Buena Park.
                     </p>
                     <p>
-                      We also service North San Diego County including Encinitas, Carlsbad, Escondido, Camp Pendleton, Rancho Santa Fe, Solano Beach, Vista, San Marcos, Hidden Meadows, Bonsall, Pala Mesa, Fallbrook, Fairbanks Ranch, Del Dios, and Valley Center.
+                      We also service parts of Los Angeles County including La Mirada, Cerritos, Norwalk, Whittier, Hacienda Heights, and Rowland Heights.
                     </p>                  </div>
                   <!-- /.card-body -->
                 </div>
@@ -579,7 +579,7 @@
       <!--/.row -->
       <hr class="my-7 mt-md-7" />
       <div class="d-md-flex align-items-center justify-content-between">
-        <p class="mb-2 mb-lg-0">© 2023 Fullerton Plumbing. All rights reserved.</p>
+        <p class="mb-2 mb-lg-0">© 2023 Plumber In Fullerton. All rights reserved.</p>
         <nav class="nav social social-white mb-0 text-md-end">
           <a href="#"><i class="fa-brands fa-google"></i></a>
           <a href="#"><i class="fa-brands fa-facebook"></i></a>
