--- a/thank-you.html
+++ b/thank-you.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Plumber In Fullerton – 404 Page Not Found">
+  <meta name="description" content="Plumber In Fullerton – Thank You">
   <meta name="author" content="elemis">
-  <title>Plumber In Fullerton – 404 Page Not Found</title>
+  <title>Plumber In Fullerton – Thank You</title>
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src="./assets/js/perf.js"></script>
